# WallStreetSimulator

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  helpers.rs  main.rs
backend/src/db/: buyassetdb.rs  init.rs  loginuserdb.rs  logoutuserdb.rs
backend/src/db/fetch/: fetch.rs
backend/src/db/room/: createroomdb.rs  fetch.rs  joinroomdb.rs  mod.rs  startroomdb.rs
backend/src/db/user/: fetches.rs  init.rs
backend/src/handlers/: createuser.rs  loginuser.rs  logoutuser.rs  verifyemail.rs
backend/src/handlers/queries/: mod.rs  queryidbyauthtoken.rs  queryroom.rs  queryuserinroom.rs
backend/src/handlers/room/: createroom.rs  joinroom.rs  mod.rs  start_game_handler.rs  ws_handler.rs
backend/src/handlers/user/: apitest.rs  createuser.rs  loginuser.rs  logoutuser.rs  mod.rs  verifyemail.rs
console/: main.py  test.txt
frontend/: index.html  index.js  navbar.html  style.css
frontend/createAccount/: index.html
frontend/src/: App.tsx  CreateAccount.css  CreateAccount.tsx  CreatePrivate.tsx  CreatePublic.tsx  GamePage.tsx  GoBack.tsx  HomePage.css  HomePage.tsx  LoginUser.css  LoginUser.tsx  Modal.css  Modal.tsx  RoomBox.css  RoomBox.tsx  RoomPage.tsx  Roompage.css  UserCard.css  UserCard.tsx  UserPage.css  UserPage.tsx  index.css
simluation/: Cargo.toml  nginxconfig
simluation/src/: main.rs
simulation/: .env  Cargo.toml
simulation/src/: db.rs  handlers.rs  helpers.rs  main.rs
simulation/src/db/: createassetdb.rs  createuserdb.rs  fetches.rs  init.rs  sellassetdb.rs
simulation/src/handlers/: buyasset.rs  (+4 more)
