[package]
name = "simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
dotenvy = "0.15.7"
regex = "1"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
lettre = "0.11"
